[package]
name = "unlikely"
version = "0.1.0"
authors = ["Jonas Schievink <jonasschievink@gmail.com>"]
description = "A branch hint for code that is `unlikely` to be executed"
documentation = "https://docs.rs/unlikely/"
repository = "https://github.com/jonas-schievink/unlikely.git"
keywords = ["optimizer", "llvm", "likely", "branch", "hint"]
categories = ["rust-patterns", "no-std"]
readme = "README.md"
license = "CC0-1.0"

[dev-dependencies]
version-sync = "0.5"


# cargo-release configuration
[package.metadata.release]
tag-message = "{{version}}"
no-dev-version = true
pre-release-commit-message = "Release {{version}}"

# Change the changelog's `Unreleased` section to refer to this release and
# prepend new `Unreleased` section
[[package.metadata.release.pre-release-replacements]]
file    = "CHANGELOG.md"
search  = "## Unreleased"
replace = "## Unreleased\n\nNo changes.\n\n## {{version}} - {{date}}"

# Bump the version inside the example manifest in `README.md`
[[package.metadata.release.pre-release-replacements]]
file    = "README.md"
search  = 'unlikely = "[a-z0-9\\.-]+"'
replace = 'unlikely = "{{version}}"'

# Bump the version referenced by the `html_root_url` attribute in `lib.rs`
[[package.metadata.release.pre-release-replacements]]
file    = "src/lib.rs"
search  = "https://docs.rs/unlikely/[a-z0-9\\.-]+"
replace = "https://docs.rs/unlikely/{{version}}"
